@@ -98,26 +98,13 @@
 #define ACE_HAS_TIMEZONE_GETTIMEOFDAY
 
 #define ACE_LACKS_ALPHASORT_PROTOTYPE
-#define ACE_LACKS_CONST_TIMESPEC_PTR
-#define ACE_LACKS_GETPGID
 #define ACE_LACKS_ISCTYPE
 #define ACE_LACKS_MADVISE
-#define ACE_LACKS_MKSTEMP_PROTOTYPE
-#define ACE_LACKS_MKTEMP_PROTOTYPE
 #define ACE_LACKS_NETDB_REENTRANT_FUNCTIONS
-#define ACE_LACKS_PTHREAD_ATTR_SETSTACK
-#define ACE_LACKS_PUTENV_PROTOTYPE
-#define ACE_LACKS_REALPATH
-#define ACE_LACKS_RLIMIT_NOFILE
-#define ACE_LACKS_RWLOCK_T
 #define ACE_LACKS_SCANDIR_PROTOTYPE
-#define ACE_LACKS_SETEGID
-#define ACE_LACKS_SETEUID
 #define ACE_LACKS_SIGINFO_H
 #define ACE_LACKS_STRPTIME
 #define ACE_LACKS_SUSECONDS_T
-#define ACE_LACKS_SWAB_PROTOTYPE
-#define ACE_LACKS_THREAD_PROCESS_SCOPING
 #define ACE_LACKS_TIMESPEC_T
 #define ACE_LACKS_UCONTEXT_H
 
@@ -131,24 +118,56 @@
 // LynxOS has poll.h but it is unusable since implementation is not provided
 #define ACE_LACKS_POLL_H
 
+#if defined (ACE_HAS_SVR4_DYNAMIC_LINKING)
+#  define ACE_HAS_BROKEN_THREAD_KEYFREE
+#endif /* ACE_HAS_SVR4_DYNAMIC_LINKING */
+
 #if ACE_LYNXOS_MAJOR == 4 && ACE_LYNXOS_MINOR == 0
+// LynxOS 4.0
 #  define ACE_LACKS_GETOPT_PROTOTYPE
 #  define ACE_LACKS_INET_ATON_PROTOTYPE
 #  define ACE_LACKS_PTHREAD_ATTR_SETSTACKADDR
 #  define ACE_LACKS_REGEX_H
+#  define ACE_LACKS_RLIMIT_NOFILE
+#  define ACE_LACKS_RWLOCK_T
 #  define ACE_LACKS_SETDETACH
 #  define ACE_LACKS_STRCASECMP_PROTOTYPE
 #  define ACE_LACKS_STRNCASECMP_PROTOTYPE
 #  define ACE_LACKS_SYS_SELECT_H
+#  define ACE_LACKS_THREAD_PROCESS_SCOPING
 #endif
 
 #if (ACE_LYNXOS_MAJOR > 4) || (ACE_LYNXOS_MAJOR == 4 && ACE_LYNXOS_MINOR >= 2)
-// LynxOS 4.2 additons
+// LynxOS 4.2 and 5.0
 #  define ACE_HAS_POSIX_SEM_TIMEOUT
 #  define ACE_HAS_MUTEX_TIMEOUTS
 #endif
 
-#if (ACE_LYNXOS_MAJOR >=5)
+#if (ACE_LYNXOS_MAJOR < 5)
+// LynxOS 4.x
+#  define ACE_HAS_LYNXOS4_GETPWNAM_R
+#  define ACE_HAS_LYNXOS4_SIGNALS
+#  define ACE_HAS_SEMUN
+#  define ACE_HAS_STRBUF_T
+#  define ACE_HAS_SYSV_IPC
+#  define ACE_LACKS_CONST_TIMESPEC_PTR
+#  define ACE_LACKS_GETPGID
+#  define ACE_LACKS_ISBLANK
+#  define ACE_LACKS_MKSTEMP_PROTOTYPE
+#  define ACE_LACKS_MKTEMP_PROTOTYPE
+#  define ACE_LACKS_PTHREAD_ATTR_SETSTACK
+#  define ACE_LACKS_PUTENV_PROTOTYPE
+#  define ACE_LACKS_REALPATH
+#  define ACE_LACKS_SETEGID
+#  define ACE_LACKS_SETENV
+#  define ACE_LACKS_SETEUID
+#  define ACE_LACKS_SWAB_PROTOTYPE
+#  define ACE_LACKS_UNSETENV
+#  define ACE_LACKS_USECONDS_T
+#  define ACE_LACKS_VSNPRINTF
+#  define ACE_LACKS_WCHAR_H
+#  define ACE_SYS_SIGLIST sys_siglist
+#else
 // LynxOS 5.0
 #  define ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES
 #  define ACE_HAS_NONCONST_INET_ADDR
@@ -158,25 +177,7 @@
 #  define ACE_LACKS_STRRECVFD
 #  define ACE_LACKS_SYS_SEM_H
 #  define ACE_SYS_SIGLIST __sys_siglist
-#else
-// LynxOS 4.x
-#  define ACE_HAS_LYNXOS4_SIGNALS
-#  define ACE_HAS_LYNXOS4_GETPWNAM_R
-#  define ACE_HAS_SEMUN
-#  define ACE_HAS_STRBUF_T
-#  define ACE_HAS_SYSV_IPC
-#  define ACE_LACKS_ISBLANK
-#  define ACE_LACKS_SETENV
-#  define ACE_LACKS_UNSETENV
-#  define ACE_LACKS_USECONDS_T
-#  define ACE_LACKS_VSNPRINTF
-#  define ACE_LACKS_WCHAR_H
-#  define ACE_SYS_SIGLIST sys_siglist
 #endif
-
-#if defined (ACE_HAS_SVR4_DYNAMIC_LINKING)
-#  define ACE_HAS_BROKEN_THREAD_KEYFREE
-#endif /* ACE_HAS_SVR4_DYNAMIC_LINKING */
 
 #include /**/ "ace/post.h"
 
